[package]
name = "historia"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
reqwasm = {version="0.5.0", features=["json"]}
web-sys = {version = "0.3.61", features=["HtmlInputElement", "HtmlSelectElement", "HtmlTableRowElement", "HtmlDivElement","HtmlButtonElement"]} 
gloo = "0.8"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
yew-nested-router = "0.2.1"
chrono = { version = "0.4", features = ["wasmbind"] }
yew-router = "0.17.0"
