[package]
name = "historia"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
gloo = "0.8"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
reqwasm = {version="0.5.0", features=["json"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = {version = "0.3.61", features=["HtmlInputElement", "HtmlSelectElement", "HtmlDivElement", "HtmlSpanElement", "HtmlButtonElement", "Clipboard"]} 
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-nested-router = "0.2.1"
yew-router = "0.18.0"



